[gd_scene load_steps=8 format=3 uid="uid://l8mp1hxwrg74"]

[ext_resource type="Script" path="res://scenes/join_screen/join_screen.gd" id="1_trerf"]
[ext_resource type="FontFile" uid="uid://bhvepy8hqrp7p" path="res://fonts/normal/normal.png" id="2_mxnmh"]
[ext_resource type="PackedScene" uid="uid://duaa42vwqvo0k" path="res://scenes/vertical_button_menu/vertical_button_menu.tscn" id="3_j42dk"]
[ext_resource type="PackedScene" uid="uid://c37ile8f4b5qu" path="res://scenes/controller_keyboard_line_edit_input/controller_keyboard_line_edit_input.tscn" id="4_0tkrc"]

[sub_resource type="Animation" id="Animation_5qphu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ConnectingLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Connecting to server . . ."]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ConnectingLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3m7mb"]
resource_name = "connecting"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ConnectingLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["Connecting to server", "Connecting to server .", "Connecting to server . .", "Connecting to server . . ."]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ConnectingLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bbq3o"]
_data = {
"RESET": SubResource("Animation_5qphu"),
"connecting": SubResource("Animation_3m7mb")
}

[node name="JoinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trerf")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_top = 16.0
offset_right = 47.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_mxnmh")
text = "JOIN GAME"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -89.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_mxnmh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" parent="." instance=ExtResource("3_j42dk")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
button_names = Array[String](["BACK", "EDIT IP", "EDIT PORT", "JOIN"])
active = true

[node name="ConnectTimer" type="Timer" parent="."]
one_shot = true

[node name="ConnectingLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -44.0
offset_right = 56.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_mxnmh")
text = "Connecting to server . . ."

[node name="ConnectingLabelAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bbq3o")
}

[node name="ServerAlreadyStartedTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PortEditControllerInput" parent="." instance=ExtResource("4_0tkrc")]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -121.5
offset_top = -180.0
offset_right = 121.5
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0
line_edit_node_path = NodePath("../PortEdit")

[node name="IpEditControllerInput" parent="." instance=ExtResource("4_0tkrc")]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -121.5
offset_top = -180.0
offset_right = 121.5
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0
line_edit_node_path = NodePath("../IpEdit")

[node name="PortEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = 32.0
offset_right = 78.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_mxnmh")
text = "25565"
placeholder_text = "PORT"

[node name="Label" type="Label" parent="PortEdit"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -6.0
offset_right = -12.0
offset_bottom = 6.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_mxnmh")
text = "PORT"

[node name="IpEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = 56.0
offset_right = 78.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_mxnmh")
text = "LOCALHOST"
placeholder_text = "IP"

[node name="Label" type="Label" parent="IpEdit"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -6.0
offset_right = -12.0
offset_bottom = 6.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_mxnmh")
text = "IP"

[connection signal="menu_selected" from="MainMenu" to="." method="_on_main_menu_menu_selected"]
[connection signal="timeout" from="ServerAlreadyStartedTimer" to="." method="_on_server_already_started_timer_timeout"]
[connection signal="text_submitted" from="PortEdit" to="." method="_on_port_edit_text_submitted"]
[connection signal="text_submitted" from="IpEdit" to="." method="_on_ip_edit_text_submitted"]
